fix overflow issues remove redundant css

--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,20 @@
 #root {
-  max-width: 100vw;
-  height: 100vh;
   margin: 0 auto;
   text-align: center;
   font-size: x-large;
 }
 
 .app{
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-.app > div{
-  border: solid limegreen 1px;
-  padding: 2ch;
-  display: flex;
-  flex-direction: column;
-  justify-content: left;
-}
-
-.main-screen{
   width: 56ch;
   height: 24em;
+  
+  border: solid limegreen 1px;
+  padding: 2ch; 
+
+  display: grid;
+  grid-template-rows: auto minmax(0, 1fr);
 }
+
 
 .contents{
   display: flex;
@@ -32,6 +22,5 @@
   justify-content: space-between;
   align-items: flex-start;
   gap: 1ch;
-
-  height: 100%;
 }
+
