--- a/src/components/TopSecretFiles/TopSecretFiles.css
+++ b/src/components/TopSecretFiles/TopSecretFiles.css
@@ -1,3 +1,3 @@
 .top-secret-text{
-    overflow-x: auto;
+    overflow: auto;
 }
